--- a/DEM.Net.glTF/DEM.Net.glTF.csproj
+++ b/DEM.Net.glTF/DEM.Net.glTF.csproj
@@ -47,16 +47,16 @@ Attributions exported with models</PackageReleaseNotes>
   <ItemGroup>
     <PackageReference Include="IxMilia.Stl" Version="0.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0014" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\SharpGLTF\src\SharpGLTF.Toolkit\SharpGLTF.Toolkit.csproj" />
     <ProjectReference Include="..\DEM.Net.Core\DEM.Net.Core.csproj" />
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="DEMnet_64.png" Pack="true" PackagePath="\"/>
+    <None Include="DEMnet_64.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ProjectExtensions>
